k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sk044-backend-service
  namespace: class-2
spec:
  selector:
    app: sk044-backend
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
