k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sk044-frontend-service
  namespace: class-2
spec:
  selector:
    app: sk044-frontend
  ports:
    - port: 8501
      targetPort: 8501
  type: ClusterIP
